Fix visibility collapsing not changing layout size

--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ li.plus{
 
 .book-form {
     visibility: collapse;
+    display: none;
 }
 
 button.add-book{
@@ -138,8 +139,10 @@ button.add-book:active{
 
 button.form-shown{
     visibility: collapse;
+    display: none;
 }
 
 .book-form.form-shown {
     visibility: visible;
+    display: block;
 }
